update design of share card and added some codeshares
